<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helpPageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uottawa.cookhelper.HelpPage">

    <TextView
        android:text="@string/help_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/helpPageTitle"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/darker_gray"
        tools:targetApi="jelly_bean" />

    <TextView
        android:text="@string/welcome_to_cook_helper"
        android:layout_width="500dp"
        android:layout_marginTop="12dp"
        android:id="@+id/welcomeToCookHelperText"
        android:layout_below="@+id/helpPageTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_red_dark"
        android:layout_height="30dp"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:text="@string/cook_helper_description"
        android:layout_width="500dp"
        android:id="@+id/cookHelperDescription"
        android:layout_below="@+id/welcomeToCookHelperText"
        android:textColor="@android:color/holo_red_light"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="60dp"
        android:textSize="14sp"
        android:textAlignment="viewStart"
        android:fontFamily="sans-serif"
        tools:ignore="UnusedAttribute"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/add_a_new_recipe"
        android:layout_width="500dp"
        android:id="@+id/addingARecipe"
        android:layout_below="@+id/cookHelperDescription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="30dp"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:layout_width="500dp"
        android:layout_below="@+id/addingARecipe"
        android:id="@+id/addingDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"
        android:text="@string/how_to_add_new_recipe"
        android:textAlignment="textStart"
        android:layout_height="100dp" />

    <TextView
        android:text="@string/find_a_recipe"
        android:layout_width="500dp"
        android:id="@+id/findingARecipe"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/addingDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:layout_width="500dp"
        android:id="@+id/findARecipeDescription"
        android:textColor="@android:color/black"
        android:text="@string/find_recipe_description"
        android:textAlignment="textStart"
        android:layout_below="@+id/findingARecipe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="90dp" />

    <TextView
        android:text="@string/_3_editing_a_recipe"
        android:layout_width="500dp"
        android:id="@+id/editingARecipe"
        android:layout_height="30dp"
        android:textSize="16sp"
        android:layout_below="@+id/findingARecipe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:layout_width="500dp"
        android:id="@+id/editingRecipe"
        android:textColor="@android:color/black"
        android:text="@string/editingARecipe"
        android:textAlignment="textStart"
        android:layout_height="90dp"
        android:layout_below="@+id/editingARecipe"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
